--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -128,10 +128,11 @@ video {
 		height: auto;
 }
 .video-container-16-9 {
-    padding-bottom: 56.25%; /* 16:9 */
-    width: 100%;
-    height: 0;
     position: relative;
+	padding-bottom: 56.25%;
+	padding-top: 30px;
+	height: 0;
+	overflow: hidden;
 }
 .video-container-16-10 {
     padding-bottom: 62.5%; /* 16:10 */
