--- a/_layouts/default_new.html
+++ b/_layouts/default_new.html
@@ -5,6 +5,12 @@
 		<h1 class="header"><a class="header" title="Home" href="/">blog.&#8203;timmschoof.&#8203;com</a></h1>
 </div> <!--header-->
 
+<div class="video-wrapper">
+<div class="video-container-16-9">
+<iframe src="http://player.vimeo.com/video/6284199?title=0&byline=0&portrait=0"  frameborder="0"></iframe>
+</div>
+</div>
+
 <div id="wrapper">
   
 	<div id="navigation">
