--- a/_layouts/default_new.html
+++ b/_layouts/default_new.html
@@ -2,7 +2,7 @@
 
 <div class="video-wrapper">
 <div class="video-container-16-9">
-<iframe src="http://player.vimeo.com/video/6284199?title=0&byline=0&portrait=0"  frameborder="0"></iframe>
+<iframe src="http://player.vimeo.com/video/6284199?title=0&byline=0&portrait=0" width="800" height="450" frameborder="0"></iframe>
 </div>
 </div>
 
