--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -127,7 +127,7 @@ video {
 		max-width: 100%;
 		height: auto;
 }
-.video-container-16-9 {
+/* .video-container-16-9 {
     position: relative;
 	padding-bottom: 56.25%;
 	padding-top: 30px;
@@ -135,13 +135,13 @@ video {
 	overflow: hidden;
 }
 .video-container-16-10 {
-    padding-bottom: 62.5%; /* 16:10 */
+    padding-bottom: 62.5%; 
     width: 100%;
     height: 0;
     position: relative;
 }
 .video-container-4-3 {
-    padding-bottom: 75.0%; /* 4:3 */
+    padding-bottom: 75.0%;
     width: 100%;
     height: 0;
     position: relative;
@@ -158,7 +158,7 @@ video {
 .video-wrapper {
 	width: 600px;
 	max-width: 100%;
-}
+} */
 #footer {
 		background-color: #424242;
 		color: #E6E6E6;
