--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -127,9 +127,21 @@ video {
 		max-width: 100%;
 		height: auto;
 }
-.videoWrapper {
+.videoWrapper-16-9 {
 	position: relative;
 	padding-bottom: 56.25%; /* 16:9 */
+	padding-top: 25px;
+	height: 0;
+}
+.videoWrapper-16-10 {
+	position: relative;
+	padding-bottom: 62.5%; /* 16:9 */
+	padding-top: 25px;
+	height: 0;
+}
+.videoWrapper-4-3 {
+	position: relative;
+	padding-bottom: 75.0%
 	padding-top: 25px;
 	height: 0;
 }
@@ -148,38 +160,6 @@ video {
 	width: 100%;
 	height: 100%;
 }
-/* .video-container-16-9 {
-    position: relative;
-	padding-bottom: 56.25%;
-	padding-top: 30px;
-	height: 0;
-	overflow: hidden;
-}
-.video-container-16-10 {
-    padding-bottom: 62.5%; 
-    width: 100%;
-    height: 0;
-    position: relative;
-}
-.video-container-4-3 {
-    padding-bottom: 75.0%;
-    width: 100%;
-    height: 0;
-    position: relative;
-}
-.video-container iframe,  
-.video-container object,  
-.video-container embed {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-}
-.video-wrapper {
-	width: 600px;
-	max-width: 100%;
-} */
 #footer {
 		background-color: #424242;
 		color: #E6E6E6;
