--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -132,6 +132,7 @@ video {
 	padding-bottom: 56.25%; /* 16:9 */
 	padding-top: 25px;
 	height: 0;
+	max-width: 900px;
 }
 .videoWrapper-16-10 {
 	position: relative;
