--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -230,6 +230,39 @@ hr {
 			width: 150px; 
 			margin-right: 520px; 
 }
+.videoWrapper-16-9 {
+	position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	padding-top: 25px;
+	height: 0;
+}
+.videoWrapper-16-10 {
+	position: relative;
+	padding-bottom: 62.5%; /* 16:9 */
+	padding-top: 25px;
+	height: 0;
+}
+.videoWrapper-4-3 {
+	position: relative;
+	padding-bottom: 75.0%
+	padding-top: 25px;
+	height: 0;
+}
+.videoWrapper-16-9 iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+.videoWrapper-16-9 object,
+.videoWrapper-16-9 embed,  {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
 sup {vertical-align: top; font-size: 10px; font-weight: normal; margin: 0 0 0 2px;}
 .footnotes { margin: 45px 25px 25px 6px; font-size: 12px; color: #777;}
 .footnotes ol {list-style-type: decimal; margin: 0 0 0 5px;}
