--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -244,7 +244,7 @@ hr {
 }
 .videoWrapper-4-3 {
 	position: relative;
-	padding-bottom: 75.0%
+	padding-bottom: 75.0%;
 	padding-top: 25px;
 	height: 0;
 }
