--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -83,7 +83,7 @@ h2 {
 		margin: 2em auto;
 		text-align: center;
 		max-width: 100%;
-		padding: 1.0em 0.5em;
+		padding: 1.0em 0.8em;
 		background-color: #FF6600;
 		/* border-top: 0.5em solid rgba(1,120,144,1.0);
 		border-bottom: 0.5em solid rgba(1,120,144,1.0); */
@@ -199,13 +199,13 @@ video {
    		height:100%;
    		text-align: center;
 }
-@media only screen and (min-width: 1100px) {
-		body { font-size:115%;}
+/* @media only screen and (min-width: 1100px) {
+		body { font-size:115%;} */
 }  	       
-@media only screen and (max-width: 765px) {
+@media only screen and (min-width: 50em) { /* 800px */
 		body { font-size:100%;}
 }   
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 25em) { /* 400px */
 		body { font-size:90%;}
 }
 /* word-wrap: break-word; */
