--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -199,13 +199,13 @@ video {
    		height:100%;
    		text-align: center;
 }
-/* @media only screen and (min-width: 1100px) {
-		body { font-size:115%;} */
+@media only screen and (min-width: 68.75em) { /* 1100px */
+		body { font-size:115%;} 
 }  	       
 @media only screen and (min-width: 50em) { /* 800px */
 		body { font-size:100%;}
 }   
-@media only screen and (max-width: 25em) { /* 400px */
+@media only screen and (min-width: 25em) { /* 400px */
 		body { font-size:90%;}
 }
 /* word-wrap: break-word; */
