--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -199,7 +199,7 @@ video {
    		height:100%;
    		text-align: center;
 }
-@media only screen and (min-width: 68.75em) { /* 1100px */
+@media only screen and (max-width: 68.75em) { /* 1100px */
 		body { font-size:115%;} 
 }  	       
 @media only screen and (min-width: 50em) { /* 800px */
