--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -122,6 +122,7 @@ p.post-date {
 }
 img {
 		max-width: 100%;
+		height: auto;
 }
 video {
 		max-width: 100%;
@@ -199,13 +200,14 @@ video {
    		height:100%;
    		text-align: center;
 }
+@media only screen and (max-width: 25em) { /* 400px */
+		body { font-size:90%;}
+}
+@media only screen and (max-width: 50em) { /* 800px */
+		body { font-size:100%;}
+}   
 @media only screen and (max-width: 68.75em) { /* 1100px */
 		body { font-size:115%;} 
 }  	       
-@media only screen and (min-width: 50em) { /* 800px */
-		body { font-size:100%;}
-}   
-@media only screen and (min-width: 25em) { /* 400px */
-		body { font-size:90%;}
-}
+
 /* word-wrap: break-word; */
