--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -206,7 +206,7 @@ video {
 @media only screen and (max-width: 50em) { /* 800px */
 		body { font-size:100%;}
 }   
-@media only screen and (max-width: 68.75em) { /* 1100px */
+@media only screen and (min-width: 68.75em) { /* 1100px */
 		body { font-size:115%;} 
 }  	       
 
