--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -202,6 +202,15 @@ video {
 }
 @media only screen and (max-width: 25em) { /* 400px */
 		body { font-size:90%;}
+		#header { 
+		margin: 0 auto;
+		padding: 0.5em 0.2em;
+}
+h1.header {
+		font-size: 2.0em;
+		line-height:1.1em;
+		margin: 0.5em 0;
+}
 }
 @media only screen and (max-width: 50em) { /* 800px */
 		body { font-size:100%;}
