--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -203,12 +203,12 @@ video {
 @media only screen and (max-width: 25em) { /* 400px */
 		body { font-size:90%;}
 		#header { 
-		margin: 0 auto;
-		padding: 0.5em 0.2em;
+		margin: 1em auto;
+		padding: 0.5em 0.3em;
 }
 h1.header {
-		font-size: 2.0em;
-		line-height:1.1em;
+		font-size: 1.7em;
+		line-height:1.0em;
 		margin: 0.5em 0;
 }
 }
