--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -203,13 +203,13 @@ video {
 @media only screen and (max-width: 25em) { /* 400px */
 		body { font-size:90%;}
 		#header { 
-/*		margin: 1em auto;
-		padding: 0.5em 0.3em; */
+		margin: 1em auto;
+		padding: 0.5em 0.3em; 
 }
 		h1.header {
 		font-size: 2.0em;
-/*		line-height:1.0em;
-		margin: 0.5em 0; */
+		line-height:1.0em;
+		margin: 0.5em 0;
 }
 }
 @media only screen and (max-width: 50em) { /* 800px */
