--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -88,13 +88,13 @@ h2 {
 		/* border-top: 0.5em solid rgba(1,120,144,1.0);
 		border-bottom: 0.5em solid rgba(1,120,144,1.0); */
 }
-#header h1 {
+h1.header {
 		font-size: 3.0em;
 		font-weight: 300;
 		line-height:1.1em;
 		margin: 0.5em 0;
 }
-header a { 
+a.header { 
 		text-decoration: none;
 		color: white;
 }
