--- a/_layouts/default_new.html
+++ b/_layouts/default_new.html
@@ -3,13 +3,13 @@
 <body>
 
 <div id="header">
-		<h1 class="header"><a class="header" title="Home" href="/">blog.&#8203;timmschoof&#8203;.com</a></h1>
+		<h1><a title="Home" href="/">blog.&#8203;timmschoof&#8203;.com</a></h1>
 </div> <!--header-->
 
 <div id="wrapper">
   
 	<div id="navigation">
-		<ul class="navigation">
+		<ul>
 			<li><a href="http://timmschoof.com">About</a></li>
 			<li><a href="/contact/">Contact</a></li>
 			<li><a href="/archives/">Archives</a></li>
