--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -214,11 +214,11 @@ video {
 }
 @media only screen and (max-width: 25em) { /* 400px */
 		body { font-size:90%;}
-		#header { 
+		div#header { 
 		margin: 1em auto;
 		padding: 0.5em 0.4em; 
 }
-		h1.header {
+		div#header h1 {
 		font-size: 2.0em;
 		line-height:1.0em;
 		margin: 0.5em 0;
