--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -106,15 +106,17 @@ div#header a {
         padding: 0 5%;
 }
 #navigation {
+		width: 100%;
 }
 div#navigation ul {
 		text-align:center;
 		padding:0;
+		margin: 0;
 		list-style:none;
 }
 div#navigation li{
 	width:auto;
-	display:inline;
+	display:inline-block;
 	padding:0 1em;
 }
 #content {
