--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -115,6 +115,7 @@ div#navigation ul {
 		list-style:none;
 }
 div#navigation li{
+	font-size: 1em,
 	width:auto;
 	display:inline-block;
 	padding:0 0.8em;
