--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -109,7 +109,7 @@ div#header a {
 		width: 100%;
 }
 div#navigation ul {
-		font-size: 2em,
+		font-size: 2em;
 		text-align:center;
 		padding:0;
 		margin: 0;
