--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -92,7 +92,7 @@ div#header h1 {
 		font-size: 3.0em;
 		font-weight: 300;
 		line-height:1.1em;
-		margin: 0.5em 0;
+		margin: 0.5em 0 0 0;
 }
 div#header a { 
 		text-decoration: none;
