--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -108,7 +108,7 @@ div#header a {
 #navigation {
 		width: 100%;
 }
-div#navigation ul {
+div#navigation ul a {
 		font-size: 1.2em;
 		color: #FF6600;
 		text-align:center;
